fixing part of a11y contrast errors for links and btns

--- a/app/assets/stylesheets/profile/shared.scss
+++ b/app/assets/stylesheets/profile/shared.scss
@@ -1,5 +1,37 @@
 $gray: #595959;
 $white: #fff;
+// PSU colors
+$pa-link: #005fa9;
+$perpetual-wonder: #491d70;
+$nittany-navy: #001e44;
+
+a {
+  color: $pa-link;
+}
+
+a:hover,
+a:focus {
+  color: $perpetual-wonder;
+}
+
+.button,
+.button.primary {
+  background-color: $pa-link;
+}
+
+.button:hover,
+.button:focus {
+  background-color: $nittany-navy;
+}
+
+.button.primary:hover,
+.button.primary:focus {
+  background-color: $nittany-navy;
+}
+
+.tabs .tabs-title.is-active {
+  border-bottom: 8px solid $pa-link;
+}
 
 .logo {
   max-width: 193px;
